<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saikrishna.cal_jerin.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_marginTop="40dp"
        android:text="@string/button"
        android:textSize="25sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button2"

        android:textSize="25sp"

        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button3"
        android:textSize="25sp"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"

        />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignEnd="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_below="@+id/button"

        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignTop="@+id/button4"
        android:text="@string/button5"
        android:textSize="25sp"
         />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button6"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"

        android:text="@string/button7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:text="@string/button8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignTop="@+id/button8"
        android:text="@string/button9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button8"

        android:text="@string/button10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignLeft="@+id/button8"

        android:layout_alignStart="@+id/button8"
        android:text="@string/button11"
        android:layout_below="@+id/button7" />

    <Button
        android:id="@+id/button12"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button12"
        android:layout_below="@+id/button9"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11"

         />

    <Button
        android:id="@+id/button13"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button13"
        android:textSize="25sp"
        android:layout_below="@+id/button14"
        android:layout_alignLeft="@+id/button14"
        android:layout_alignStart="@+id/button14" />

    <Button
        android:id="@+id/button14"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button14"
        android:textSize="25sp"
        android:layout_below="@+id/button16"
        android:layout_alignLeft="@+id/button16"
        android:layout_alignStart="@+id/button16" />

    <Button
        android:id="@+id/button15"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button15"
        android:layout_below="@+id/button13"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/button16"
        android:layout_below="@+id/button17"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"

        android:textSize="25sp"
        />

    <Button
        android:id="@+id/button17"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/button17"
        android:textSize="25sp"

        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/button16"
        android:layout_alignEnd="@+id/button16" />

</RelativeLayout>

